Trim the JDK 27 slides and fix the compact-object-headers overflow
- security: drop the PEM Encodings row from the General 2/3 list, now covered by
  the dedicated PEM slide in the New APIs section
- miscellaneous: remove the dedicated "JDK 27 - Tools and Diagnostics" slide and
  keep only the two behaviour/compat changes as rows on "Launching and tools"
  (numeric JSON thread dumps with formatVersion 2; RuntimeMXBean
  .getInputArguments() now prefixing settings-file args with -XX:)
- performance: tighten the Compact Object Headers slide (mb-10 -> mb-6 plus a
  single-line footer) so the JDK 27 default note no longer overflows